[package]
name = "gold"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0.79"

[dependencies]
lazy_static = "1.4.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
# tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter.git" }
tree-sitter = "0.20"
tree-sitter-edit = "0.3.0"
walkdir = "2.3.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
