[package]
name = "gold"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
lazy_static = "1.4"
regex = "1.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9"
simple-error = "0.3"
tree-sitter = "0.20"
tree-sitter-edit = "0.3"
walkdir = "2.3"

[dev-dependencies]
pretty_assertions = "*"
duct = "*"
